[project]
name = "fhir-query"
version = "0.1.0"
description = "A simple client for querying FHIR servers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.12",
    "fhirpathpy>=1.2.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]

[tool.uv]
dev-dependencies = [
    "isort>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
